fix(responsive-design): make title font smaller
Previously the font of the title was too large for iPhone screens.
This commit makes the title fit.

--- a/responsive-design-lab/05-2-responsive-layout/styles/main.css
+++ b/responsive-design-lab/05-2-responsive-layout/styles/main.css
@@ -8,7 +8,7 @@ body {
 
 h1 {
     font-family: "Lobster", cursive;
-    font-size: 4rem;
+    font-size: 3rem;
 }
 
 h2 {
